k8s_manifests/old_qb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  volumes:
   - name: nfs-vol 
     nfs:
       server: 192.168.0.114
       path: /mnt/test1/media/testing
  - name: config
    persistentVolumeClaim:
      claimName: config-qbittorrent
  containers:
    - name: qbittorrent
      image: ghcr.io/hotio/qbittorrent:latest
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: config 
          mountPath: /config
        - name: nfs-vol 
          mountPath: /media
---
apiVersion: v1
kind: Service
metadata:
  name: svc-qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: webui
      protocol: TCP 
      port: 80
      targetPort: 8080
