k8s_manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: "truenas.local"
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: svc-truenas
                port:
                  number: 443
    - host: "tdarr.local"
      http:
        paths:
          - path: / 
            pathType: Prefix 
            backend: 
              service:
               name: svc-tdarr 
               port: 
                 number: 80
    - host: "slskd.local"
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: svc-slskd 
                port: 
                  number: 80
    - host: "bazarr.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-bazarr
                port:
                  number: 80
    - host: "prowlarr.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-prowlarr
                port:
                  number: 80
    - host: "radarr.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-radarr
                port:
                  number: 80
    - host: "lidarr.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-lidarr
                port:
                  number: 80
    - host: "qbittorrent.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-qbittorrent
                port:
                  number: 80
    - host: "plex.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-plex
                port:
                  number: 80
    - host: "sonarr.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-sonarr
                port:
                  number: 80
    - host: "flaresolverr.local"
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: svc-flaresolverr 
                port:
                  number: 80
